--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     autoDeploy: true
     envVars:
       - key: N8N_HOST
-        value: your-subdomain.onrender.com
+        value: your-n8n-service.onrender.com
       - key: N8N_PORT
         value: 5678
       - key: N8N_BASIC_AUTH_ACTIVE
@@ -14,6 +14,8 @@ services:
       - key: N8N_BASIC_AUTH_USER
         value: admin
       - key: N8N_BASIC_AUTH_PASSWORD
-        value: strong_password
+        value: strongpassword123
       - key: DB_TYPE
-        value: sqlite
+        value: postgresdb
+      - key: DB_POSTGRESDB_CONNECTION_STRING
+        value: postgresql://neondb_owner:npg_Masz93IOFxyg@ep-young-wave-a2himr5o-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
