--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     autoDeploy: true
     envVars:
       - key: N8N_HOST
-        value: your-n8n-service.onrender.com
+        value: n8n-au60.onrender.com
       - key: N8N_PORT
         value: 5678
       - key: N8N_BASIC_AUTH_ACTIVE
